$Id$                       -*-text-*-


**** 0.79 [unreleased]

Fix rt.cpan.org #97502

	Net::DNS::Resolver->retrans does not accept a value of 1 (uses 2 instead)

Fix rt.cpan.org #81760

	Reverted workaround for TXT issue preventing propagation of
	rule updates for SpamAssassin versions earlier than 3.4.0


**** 0.78 Jul 10, 2014

Fix rt.cpan.org #97036

	Nameserver identification on Cygwin

Fix rt.cpan.org #96814

	Trailing comments not stripped in /etc/resolv.conf

Fix rt.cpan.org #96812

	Net::DNS::Resolver->new() hangs if nameserver :: exists

Fix rt.cpan.org #96755

	RFC 3597 (hex) parsing mistake

Fix rt.cpan.org #96708

	String treated as boolean in TXT

Fix rt.cpan.org #96608

	"Insecure dependency in connect" with Net::DNS::Resolver over TCP

Fix rt.cpan.org #96535

	Net::DNS::Resolver warns "Use of uninitialized value in length"

Fix rt.cpan.org #96531

	Calling $resolver->nameservers multiple times returns an
	increasingly-long list (on some perl installations)

Fix rt.cpan.org #96439

	Uninitialised decoding object when printing packet


**** 0.77 Jun 13, 2014

Fix rt.cpan.org #96151

	Unlocalised $_ modified when reading config file

Fix rt.cpan.org #96135

	Deep recursion problem on Cygwin

Fix rt.cpan.org #96119

	"Too late to run INIT block" warning for require Net::DNS
 
Fix rt.cpan.org #96035
 
	Insert missing plan 'no-plan' in 10-recurse.t

Fix inefficient Net::DNS::SEC compatibility code


**** 0.76 May 23, 2014

Fix rt.cpan.org #95738

	Test failure with IPv6 address in resolver.conf but without
	prerequisite IO::Socket::INET6 package installed.

Fix rt.cpan.org #95596

	Incorrect parsing of nameserver lines in resolv.conf

Feature rt.cpan.org #79568

	Implement prefer_v6 resolver configuration attribute.

Fix rt.cpan.org #67602

	Set resolver configuration defaults at first instantiation
	instead of module load time.


**** 0.75 May 8, 2014

Fix rt.cpan.org #94069

	Compile-time constant in Domain.pm/Text.pm cannot be used to